fix(style): Fixed how overlapping z-index are handheld

--- a/packages/web-client/src/App.module.css
+++ b/packages/web-client/src/App.module.css
@@ -14,6 +14,8 @@
   width: 100%;
   height: 100%;
   overflow: auto;
+  position: relative;
+  z-index: 0;
 }
 
 .AppRendererContainer > * {
