--- a/packages/web-client/src/themes/98/Tabs.module.css
+++ b/packages/web-client/src/themes/98/Tabs.module.css
@@ -1,8 +1,3 @@
 .Tabs {
   padding: 2px 0;
 }
-
-.Tabs > menu {
-  /* Prevent tabs to appear on top of Overlays */
-  z-index: 0;
-}
